tests/programs/errors/circular_import_b.flow
module tests.programs.errors.circular_import_b

import tests.programs.errors.circular_import_a

fn bar(): int = circular_import_a.foo()
